Fix: Calidad del codigo
- Arreglados diversos Bugs de Sonarcloud.
- Arreglados diversos Code Smells de SonarCloud.